--- a/watchlist/src/main/resources/templates/watchlist.html
+++ b/watchlist/src/main/resources/templates/watchlist.html
@@ -30,7 +30,7 @@
                      <a class = "nav-link" href = "watchlist.html">Watchlist</a>
                   </li>
                   <li class = "nav-item ">
-                     <a class = "nav-link" href = "watchlistItemForm-static.html">Submit an item</a>
+                     <a class = "nav-link" href = "watchlistItemForm.html">Submit an item</a>
                   </li>
                </ul>
                
@@ -53,7 +53,7 @@
 		            <td th:text=" ${watchlistItem.rating}">7.8</td>
 		            <td th:text=" ${watchlistItem.priority}">LOW</td>
 		            <td th:text=" ${watchlistItem.comment}">Peter recommended</td>
-					<td><a href="#" class="btn btn-info" role="button">Update</a></td>
+					<td><a href="#" class="btn btn-info" role="button" th:href="@{/watchlistItemForm(id=${watchlistItem.id})}">Update</a></td>
 				</tr>
 
 			</tbody>
