fixing form validations

--- a/watchlist/src/main/resources/templates/watchlistItemForm.html
+++ b/watchlist/src/main/resources/templates/watchlistItemForm.html
@@ -48,7 +48,7 @@
                   <input th:field="*{title}" type = "text" class = "form-control" placeholder = "Mandatory">
                </div>
                <div class="col-sm-4">
-        			<span class="text-danger"> </span>      
+        			<span class="text-danger"  th:errors="*{title}"> </span>      
       			</div>
             </div>
             
@@ -78,7 +78,7 @@
                		<textarea th:field="*{comment}" class = "form-control" rows = "3" placeholder = "Max. 50 chars"></textarea>
                </div>
                <div class="col-sm-4">
-        			<span class="text-danger"> </span>      
+        			<span class="text-danger" th:errors="*{comment}"> </span>      
       			</div>
             </div>
             
