--- a/watchlist/src/main/resources/templates/index.html
+++ b/watchlist/src/main/resources/templates/index.html
@@ -28,10 +28,10 @@
                      <a class = "nav-link active" href = "homepage-static.html">Home</a>
                   </li>
                   <li class = "nav-item">
-                     <a class = "nav-link" href = "watchlist.html">Watchlist</a>
+                     <a class = "nav-link" href = "watchlist-static.html">Watchlist</a>
                   </li>
                   <li class = "nav-item ">
-                     <a class = "nav-link" href = "watchlistItemForm.html">Submit an item</a>
+                     <a class = "nav-link" href = "watchlistItemForm-static.html">Submit an item</a>
                   </li>
                </ul>
                
